# cargo-godot-lib

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
mock_godot_project/: loading.tscn
src/: error.rs  gdextension_config.rs  godot_commands.rs  lib.rs
