[package]
name = "cargo-godot-lib"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Execute Godot from a cargo run script"
repository = "https://github.com/dragonaxe/cargo-godot-lib"

[lib]
name = "cargo_godot"
crate-type = ["cdylib", "rlib"]

[dependencies]
cargo_metadata = "0.23"
pathdiff = "0.2"
thiserror = "2.0"
which = "8.0"

[dev-dependencies]
tempfile = "3.24.0"
