[package]
name = "cargo-godot-lib"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A library to run Godot from a Cargo run script"
homepage = "https://github.com/dragonaxe/cargo-godot-lib"
repository = "https://github.com/dragonaxe/cargo-godot-lib"
readme = "README.md"
keywords = [ "gamedev", "godot", "cargo", "godot-bevy", "gdextension" ]
categories = [ "game-development", "game-engines", "development-tools" ]

[lib]
name = "cargo_godot_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
cargo_metadata = "0.23"
pathdiff = "0.2"
thiserror = "2.0"
which = "8.0"

[dev-dependencies]
tempfile = "3.24.0"
